# DeepLabCut_toolbox

./: .zenodo.json  CHANGELOG.md  CITATION.cff  OF.py  README.md  pyproject.toml  velocity_calculation.py
dlc_behavior_toolbox/: __init__.py  analyze_arena_pose.py
publications/: README.md
publications/Makdissi_et_al/: README.md  analyze_arena_pose_Plastic.py  cFC_analysis_Plastic.py  mwm_analysis.py  results_collector_Plastic.py
